--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,7 +29,22 @@ jobs:
               run: |
                 docker build -t ${{vars.DOCKER_USERNAME}}/frontend:latest ./client
                 docker push ${{vars.DOCKER_USERNAME}}/frontend:latest
-            
-             
+    deploy:
+        runs-on: ubuntu-latest
+        needs:  build_and_push
+        steps: 
+            - name: Login to Server
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{secrets.EC2_HOST_SERVER}}
+                username: ${{secrets.EC2_USERNAME}}
+                key: ${{secrets.EC2_PRIVATE_KEY}}
+                script: |
+                    cd /home/ubuntu/david
+                    sudo docker login -u ${{vars.DOCKER_USERNAME}} -p ${{secrets.DOCKERHUB_TOKEN}}
+                    sudo docker-compose pull
+                    sudo docker-compose down
+                    sudo docker-compose up -d
+
               
 
